plugins/security/ip-restriction/2-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-restriction-plugin
  namespace: testing
  annotations:
    konghq.com/plugins: ip-restriction-plugin
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /ip-restriction
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 80
